# myflightbook-mcp

./: .gitignore  OAUTH_SETUP.md  README.md  launch-personal.sh  pyproject.toml  requirements.txt
src/myflightbook_mcp/: __init__.py  __main__.py  client.py  server.py
